feat/results-regulation

--- a/src/assets/additional/vars.scss
+++ b/src/assets/additional/vars.scss
@@ -1,1 +1,8 @@
 $main-background: #efdfd0;
+$overview-top-txt: #52525b;
+$results-border: #71717a;
+$active-category: #000000;
+$primary: #ffffff;
+$regulation-main: #18181b;
+$review-bckg: #f8f4f0;
+$subhead-regulation: #52525b;
