--- a/src/assets/additional/fonts.scss
+++ b/src/assets/additional/fonts.scss
@@ -1,1 +1,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Plus+Jakarta+Sans:wght@400;700&family=Source+Serif+4:opsz,wght@8..60,400;8..60,600&display=swap");
+
+@font-face {
+  font-family: "Bold Inter";
+  src: local("Inter Bold"), url("../fonts/Inter-Bold.ttf");
+}
+@font-face {
+  font-family: "Semi Inter";
+  src: local("Inter SemiBold"), url("../fonts/Inter-SemiBold.ttf");
+}
+
+@font-face {
+  font-family: "Medium Inter";
+  src: local("Inter Medium"), url("../fonts/Inter-Medium.ttf");
+}
+
+@font-face {
+  font-family: "Inter";
+  src: local("Inter Regular"), url("../fonts/Inter-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Source Serif 4";
+  src: local("Source Serif 4 Regular"), url("../fonts/SourceSerif4-Regular.ttf");
+}
