--- a/src/assets/additional/vars.scss
+++ b/src/assets/additional/vars.scss
@@ -1,1 +1,13 @@
 $main-background: #efdfd0;
+$beta-plug-bckg: #000;
+$beta-plug-text: #fff;
+$google-btn-bckg: #f4f4f5;
+$general-info-title: #18181b;
+$functional-btn: #000;
+$functional-btn-txt: #fff;
+$functional-search-desc: #52525b;
+$search-bckg: #efdfd0;
+$search-txt: #71717a;
+$terms-color: #52525b;
+$category-bckg: #e9d5c3;
+$waitlist-btn-txt: #fff;
