--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -2,3 +2,5 @@
 @import "./additional/vars.scss";
 @import "./mixins/mixins.scss";
 @import "./additional/normalize.scss";
+@import "./components/main-page.scss";
+@import "./components/categories.scss";
