--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -4,3 +4,5 @@
 @import "./additional/normalize.scss";
 @import "./components/main-page.scss";
 @import "./components/categories.scss";
+@import "./components/regulation.scss";
+@import "./components//results.scss";
