--- a/src/assets/components/results.scss
+++ b/src/assets/components/results.scss
@@ -1,12 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz@8..60&display=swap");
 
 .overview {
-  padding: 54px 140px 135px 140px;
+  padding: 54px 140px 135px;
+
+  @include onTablet {
+    padding: 54px 94px 292px;
+  }
+
+  @include onMobile {
+    padding: 26px 8vw 367px;
+  }
+
   &-top {
     width: 100%;
     display: flex;
     justify-content: flex-end;
     margin-bottom: 43px;
+
+    @include onMobile {
+      margin-bottom: 7px;
+    }
+
     &-btn {
       border: none;
       background: none;
@@ -29,6 +43,11 @@
     flex-direction: row;
     align-items: center;
     margin-bottom: 15px;
+
+    @include onMobile {
+      margin-bottom: 19px;
+    }
+
     &__title {
       font-family: "Bold Inter";
       font-style: normal;
@@ -40,11 +59,17 @@
       background-clip: text;
       text-fill-color: transparent;
     }
+
     &-end {
       display: flex;
       flex-direction: row;
       align-items: center;
       gap: 32px;
+
+      @include onMobile {
+        display: none;
+      }
+
       &-list {
         display: flex;
         align-items: center;
@@ -56,11 +81,23 @@
   &-categories {
     width: 100%;
     margin-bottom: 84px;
+
+    @include onMobile {
+      margin-bottom: 46px;
+    }
+
     &-list {
       list-style: none;
       display: flex;
       gap: 12px;
       &-item {
+        @include onMobile {
+          &:nth-of-type(4),
+          &:nth-of-type(5) {
+            display: none;
+          }
+        }
+
         &-btn {
           border: 1px solid $results-border;
           border-radius: 100px;
@@ -109,13 +146,37 @@
         }
       }
     }
+
+    &-func {
+      &__list {
+        display: none;
+
+        @include onTablet {
+          display: flex;
+          align-items: center;
+          gap: 20px;
+          list-style-type: none;
+          margin-top: 21px;
+        }
+      }
+    }
   }
 }
 
 .results {
   padding-right: 17px;
+
+  @include onTablet {
+    padding-right: 0;
+  }
+
   &-regulation {
     margin-bottom: 36px;
+
+    @include onMobile {
+      margin-bottom: 24px;
+    }
+
     &-head {
       font-family: "Bold Inter";
       font-style: normal;
@@ -126,9 +187,19 @@
       -webkit-text-fill-color: transparent;
       background-clip: text;
       text-fill-color: transparent;
+
+      @include onMobile {
+        font-size: 12px;
+        line-height: 16px;
+      }
     }
     &-desc {
       max-width: 1077px;
+
+      @include onTablet {
+        max-width: 725px;
+      }
+
       &__txt {
         font-family: "Source Serif 4";
         font-style: normal;
@@ -137,13 +208,27 @@
         display: flex;
         align-items: center;
         color: $regulation-main;
+
+        @include onMobile {
+          font-size: 16px;
+          line-height: 22px;
+        }
       }
     }
   }
   &-reviews {
     display: flex;
-    gap: 44px;
+    gap: 36px;
     flex-direction: column;
+
+    @include onTablet {
+      gap: 64px;
+    }
+
+    @include onMobile {
+      gap: 41px;
+    }
+
     &-block {
       display: flex;
       flex-direction: column;
@@ -157,6 +242,13 @@
   flex-direction: row;
   gap: 24px;
   align-items: center;
+
+  @include onMobile {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 13px;
+  }
+
   &-review {
     background-color: $review-bckg;
     border: none;
@@ -164,6 +256,11 @@
     padding: 24px 26px 20px 25px;
     max-width: 1075px;
     margin-bottom: 12px;
+
+    @include onMobile {
+      padding: 20px 26px;
+    }
+
     &__txt {
       font-family: "Source Serif 4";
       font-style: normal;
@@ -171,6 +268,11 @@
       font-size: 18px;
       line-height: 28px;
       color: $active-category;
+
+      @include onMobile {
+        font-size: 16px;
+        line-height: 22px;
+      }
     }
   }
   &-controls {
@@ -179,6 +281,15 @@
     align-items: center;
     flex-direction: row;
     gap: 18px;
+
+    @include onTablet {
+      flex-direction: column;
+    }
+
+    @include onMobile {
+      flex-direction: row;
+    }
+
     &__item {
       &-btn {
         background: none;
