--- a/src/assets/components/regulation.scss
+++ b/src/assets/components/regulation.scss
@@ -74,6 +74,7 @@
           flex-direction: row;
           align-items: center;
           gap: 10px;
+          cursor: pointer;
           & > img {
             width: 16px;
             height: 16px;
@@ -141,6 +142,8 @@
     }
   }
   &-desc {
+    max-width: 815px;
+
     &__txt {
       font-family: "Source Serif 4";
       font-style: normal;
@@ -190,7 +193,7 @@
     }
 
     &-line {
-      width: 12px;
+      min-width: 12px;
       border: none;
       border-radius: 4px;
       background: $active-category;
