--- a/src/assets/components/main-page.scss
+++ b/src/assets/components/main-page.scss
@@ -191,9 +191,9 @@
     align-items: center;
     padding: 12px 36px;
     gap: 10px;
-    background: linear-gradient(90deg, #f548b0 -5.11%, #e06a79 100%);
+    background: linear-gradient(90deg, #f548b0 -5.11%, #eb8391 100%);
     background-size: 300% 300%;
-    animation: gradient 4s ease infinite;
+    animation: gradient 7s ease infinite;
     border-radius: 10px;
     margin-top: 16px;
     border: none;
