--- a/src/assets/components/regulation.scss
+++ b/src/assets/components/regulation.scss
@@ -182,7 +182,11 @@
     display: flex;
     gap: 16px;
     flex-direction: row;
-
+    &:hover {
+      background-color: #f8f4f0;
+      transition: 0.5s;
+      border-radius: 14px;
+    }
     @include onTablet {
       gap: 19px;
     }
@@ -215,7 +219,6 @@
         font-size: 18px;
         line-height: 28px;
         color: $regulation-main;
-
         @include onMobile {
           font-size: 16px;
           line-height: 22px;
