--- a/src/assets/components/results.scss
+++ b/src/assets/components/results.scss
@@ -65,7 +65,9 @@
       flex-direction: row;
       align-items: center;
       gap: 32px;
-
+      @include onTablet {
+        display: none;
+      }
       @include onMobile {
         display: none;
       }
