--- a/src/assets/components/regulation.scss
+++ b/src/assets/components/regulation.scss
@@ -182,6 +182,7 @@
     display: flex;
     gap: 16px;
     flex-direction: row;
+    transition: 0.3s;
     cursor: pointer;
 
     &-active {
@@ -205,7 +206,11 @@
       margin-top: 12px;
 
       @include onTablet {
-        display: none;
+        justify-content: flex-start;
+      }
+
+      & > img {
+        cursor: pointer;
       }
 
       &-btn {
@@ -280,6 +285,17 @@
 
     @include onMobile {
       margin-bottom: 0;
+    }
+
+    &-footer-links {
+      display: none;
+
+      @include onTablet {
+        display: flex;
+        align-items: center;
+        gap: 16px;
+        list-style-type: none;
+      }
     }
 
     &-func {
@@ -368,6 +384,14 @@
         &__item-btn {
           background: none;
           border: none;
+
+          @include onMobile {
+            max-width: 23px;
+          }
+
+          & > img {
+            width: 100%;
+          }
         }
       }
     }
