--- a/src/assets/components/main-page.scss
+++ b/src/assets/components/main-page.scss
@@ -5,7 +5,7 @@
   margin: 42px 4vw 0 3vw;
 
   @include onMobile {
-    margin: 47px 52px 0 19.75px;
+    margin: 47px 19.75px 0 19.75px;
   }
 
   &__logo {
@@ -24,7 +24,7 @@
     gap: 18px;
 
     @include onMobile {
-      gap: 10px;
+      gap: 8px;
     }
 
     &-beta {
@@ -121,7 +121,7 @@
       font-size: 36px;
       line-height: 40px;
       max-width: none;
-      padding: 0 37px;
+      padding: 0 5vw;
     }
   }
 
@@ -243,12 +243,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 386px;
+  width: 80vw;
 
   &__inp {
-    width: 386px;
     margin-bottom: 12px;
     border-radius: 10px;
     height: 56px;
+    width: 100%;
 
     &-item {
       font-family: "Inter";
@@ -256,7 +258,7 @@
       font-weight: 400;
       font-size: 18px;
       line-height: 24px;
-      width: 305px;
+      width: 60vw;
       box-sizing: border-box;
       border: none;
       outline: none;
