--- a/src/assets/components/regulation.scss
+++ b/src/assets/components/regulation.scss
@@ -190,7 +190,7 @@
       background-color: #f8f4f0;
       transition: 0.2s;
       border-radius: 14px;
-      padding-left: 31px;
+      padding: 20px 30px;
     }
 
     @include onTablet {
