--- a/src/assets/components/results.scss
+++ b/src/assets/components/results.scss
@@ -320,10 +320,16 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  @include onMobile {
+    gap: 10px;
+  }
   &-head {
     display: flex;
     flex-direction: row;
     gap: 19px;
+    @include onMobile {
+      align-items: center;
+    }
     &__main {
       font-family: "Bold Inter";
       font-style: normal;
