--- a/src/assets/additional/vars.scss
+++ b/src/assets/additional/vars.scss
@@ -18,3 +18,8 @@ $primary: #ffffff;
 $regulation-main: #18181b;
 $review-bckg: #f8f4f0;
 $subhead-regulation: #52525b;
+$modal-bg: rgba(255, 255, 255, 0.65);
+$modal-btn-bg: #000;
+$modal-btn-txt: #fff;
+$modal-txt-color: #18181b;
+$modal-radio: #000;
