--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -6,3 +6,4 @@
 @import "./components/categories.scss";
 @import "./components/regulation.scss";
 @import "./components//results.scss";
+@import "./components//modal.scss";
