--- a/src/assets/components/results.scss
+++ b/src/assets/components/results.scss
@@ -272,6 +272,7 @@
     padding: 24px 26px 20px 25px;
     max-width: 1075px;
     margin-bottom: 12px;
+    cursor: pointer;
 
     @include onMobile {
       padding: 20px 26px;
