--- a/src/assets/components/regulation.scss
+++ b/src/assets/components/regulation.scss
@@ -43,6 +43,7 @@
     align-items: center;
     flex-direction: row;
     margin-bottom: 7px;
+    gap: 10px;
     &-title {
       display: flex;
       flex-direction: row;
