--- a/src/assets/components/results.scss
+++ b/src/assets/components/results.scss
@@ -58,6 +58,8 @@
       -webkit-text-fill-color: transparent;
       background-clip: text;
       text-fill-color: transparent;
+      outline: none;
+      border: none;
     }
 
     &-end {
